--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,3 +1,4 @@
+<!--
 <ion-header>
   <ion-navbar>
     <ion-title>
@@ -14,4 +15,8 @@
       @ionicframework
     </ion-item>
   </ion-list>
+</ion-content>
+-->
+<ion-content padding>
+  <div id="lugutongchart"></div>
 </ion-content>
