--- a/src/pages/gegu/gegu.html
+++ b/src/pages/gegu/gegu.html
@@ -1,3 +1,4 @@
+<!--
 <ion-header>
   <ion-navbar>
     <ion-title>
@@ -9,3 +10,6 @@
 <ion-content padding>
 
 </ion-content>
+-->
+
+<ion-searchbar></ion-searchbar>
