--- a/src/pages/gegu/gegu.html
+++ b/src/pages/gegu/gegu.html
@@ -12,7 +12,12 @@
 </ion-content>
 -->
 
-<ion-searchbar></ion-searchbar>
+<ion-searchbar (ionInput)="getHistoryStocks($event)"></ion-searchbar>
+<ion-list>
+  <ion-item *ngFor="let item of historyStocks">
+    {{item}}
+  </ion-item>
+</ion-list>
 
 <ion-content padding>
   <div id="geguchart"></div>
