--- a/src/pages/gegu/gegu.html
+++ b/src/pages/gegu/gegu.html
@@ -1,24 +1,14 @@
-<!--
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      About
-    </ion-title>
-  </ion-navbar>
+    <ion-navbar>
+        <ion-searchbar (ionInput)="getHistoryStocks($event)"></ion-searchbar>
+        <ion-list>
+            <ion-item *ngFor="let item of historyStocks" (click)="loadLuGuTongPoints($event, item)">
+                {{item}}
+            </ion-item>
+        </ion-list>
+    </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-
-</ion-content>
--->
-
-<ion-searchbar (ionInput)="getHistoryStocks($event)"></ion-searchbar>
-<ion-list>
-  <ion-item *ngFor="let item of historyStocks">
-    {{item}}
-  </ion-item>
-</ion-list>
-
-<ion-content padding>
-  <div id="geguchart"></div>
+    <div id="geguchart"></div>
 </ion-content>
